Fix overlay of suggestions (z-index)

--- a/styles/startscreen.scss
+++ b/styles/startscreen.scss
@@ -21,6 +21,7 @@
 
 .wrapper-search-field {
   width: 100%;
+  position: relative;
 }
 
 #search-field {
@@ -38,7 +39,9 @@
 }
 
 #locations {
-  z-index: 2;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
   background-color: #101214;
   border-radius: $border-radius;
 }
@@ -63,15 +66,10 @@
 }
 
 .favorites {
-  z-index: 1;
   display: flex;
   flex-direction: column;
   width: 100%;
   align-items: center;
-}
-
-.message-favorites {
-  z-index: 1;
 }
 
 .wrapper {
